<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">myMusic</string>
    <string name="menu_add_played_song">Add played song</string>
    <string name="menu_statistics">History</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_update">Update</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_add_played_song">AddPlayedSong</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_label">myMusic-App-Label</string>
    <string name="search_hint">Search songs or artists</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="update_database">Update database</string>
    <string name="title_activity_manage_settings">ManageSettings</string>
    <string name="title_activity_update">Update</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="text_default_device">Default device:</string>
    <string name="no_records">No records were found for your search</string>
    <string name="not_enough_characters">Please type at least 4 characters</string>
    <string name="dummy_song_name">Song name</string>
    <string name="dummy_song_artist">Song artist</string>
    <string name="dummy_song_record">Song record</string>
    <string name="dummy_played_title">Played title</string>
    <string name="dummy_played_record">Played record</string>
    <string name="dummy_played_time">Played time</string>
    <string name="title_activity_played_detail">PlayedDetail</string>
    <string name="title_activity_favourites">Favourites</string>
    
    <string name="tab_top2020">Top 20/20</string>
    <string name="tab_alltime">All time</string>
    <string name="tab_songs">Songs</string>
    <string name="tab_artists">Artists</string>

</resources>
