<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical" >
 
    <TextView
	     android:id="@+id/songName"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:padding="4dip"
	     android:textSize="14sp"
	     android:textStyle="bold"
	     android:text="@string/dummy_song_name" />
 
    <TextView
	     android:id="@+id/songArtist"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:padding="2dip"
	     android:textSize="13sp"
	     android:text="@string/dummy_song_artist" />
    
    <TextView
	     android:id="@+id/songRecord"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:padding="2dip"
	     android:textSize="11sp"
	     android:text="@string/dummy_song_record" />
    
</LinearLayout>