<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical" >
 
    <TextView
	     android:id="@+id/playedTitle"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:padding="4dip"
	     android:textSize="14sp"
	     android:textStyle="bold"
	     android:text="@string/dummy_played_title" />
 
    <TextView
	     android:id="@+id/playedRecord"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:padding="2dip"
	     android:textSize="10sp"
	     android:text="@string/dummy_played_record" />
    
    <TextView
	     android:id="@+id/playedTime"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:padding="2dip"
	     android:textSize="12sp"
	     android:text="@string/dummy_played_time" />
    
</LinearLayout>