<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="280sp"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_played_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/menu_add_played_song"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:padding="20dip"
        />
    
    <TextView
        android:id="@+id/statistics"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/menu_statistics"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:padding="20dip" />
    
    <TextView
        android:id="@+id/settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:gravity="center_horizontal"
        android:text="@string/menu_settings"
        android:textSize="20sp"
        android:padding="20dip" />
    
    <TextView
        android:id="@+id/update"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:gravity="center_horizontal"
        android:text="@string/menu_update"
        android:textSize="20sp"
        android:padding="20dip" />

</LinearLayout>
