<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Favourites" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        
        <TextView 
            android:id="@+id/tab_top2020"
            android:text="@string/tab_top2020"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="24sp"
            />
        
        <TextView 
            android:id="@+id/tab_alltime"
            android:text="@string/tab_alltime"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="24sp"
            />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        
        <TextView 
            android:id="@+id/tab_songs"
            android:text="@string/tab_songs"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="24sp"
            />
        
        <TextView 
            android:id="@+id/tab_artists"
            android:text="@string/tab_artists"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="24sp"
            />
        
    </LinearLayout>
    
    <ListView
		android:id="@+id/charts_top2020_songs"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="visible" />
    
    <ListView
		android:id="@+id/charts_top2020_artists"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone" />
    
    <ListView
		android:id="@+id/charts_alltime_songs"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone" />
    
    <ListView
		android:id="@+id/charts_alltime_artists"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone" />

</LinearLayout>
