<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical" >
 
 
    <TextView
	     android:id="@+id/detailSongTitle"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:padding="4dip"
	     android:textSize="20sp"
	     android:textStyle="bold" />
 
   
    <TextView
	     android:id="@+id/detailSongRecord"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:padding="2dip"
	     android:textSize="14sp" />
    
    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false" />
    
     <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-16dp" />
     
     
     <LinearLayout 
		    android:id="@+id/LinearLayout01" 
		    android:layout_height="wrap_content" 
		    android:layout_width="fill_parent"
		    android:layout_marginTop="-16dp" >
		    
         	 <CheckBox
		        android:id="@+id/chkStart"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/start"
		        android:checked="true"
		        android:layout_marginRight="25dp" />
         
		    <CheckBox
		        android:id="@+id/chkEnd"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/end" />
		   
		</LinearLayout>
	

		<LinearLayout 
		    android:id="@+id/LinearLayout02" 
		    android:layout_height="wrap_content" 
		    android:layout_width="fill_parent"
		    android:layout_marginTop="10dp" >
		    <Button 
		        android:id="@+id/btnSave" 
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
		        android:layout_weight="1"
		        android:text="@string/save"  >
		    </Button>
		    <Button 
		        android:id="@+id/btnCancel" 
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content"
		        android:layout_weight="1" 
		        android:text="@string/cancel">
		    </Button>
		</LinearLayout>
    
    
</LinearLayout>